--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "homepage": "http://lamaterservice.com/test-joke",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.13.1",
+    "react-exif-orientation-img": "^0.1.5",
+    "react-hot-loader": "^4.12.20",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
