--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "env-cmd": "^10.1.0",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-audio-player": "^0.11.1",
