--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,6 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-l
-  RewriteRule . test-joke/index.html [L]
+  RewriteRule . joke-cam/index.html [L]
 
 </IfModule>
