--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "binary-file": "^0.2.3",
+    "cra-append-sw": "^2.7.0",
     "env-cmd": "^10.1.0",
     "exif-js": "^2.3.0",
     "md5": "^2.2.1",
@@ -32,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cra-append-sw --skip-compile ./public/custom-sw.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
